--- a/src/components/ToDoList/ToDoList.module.css
+++ b/src/components/ToDoList/ToDoList.module.css
@@ -1,3 +1,8 @@
+h2{
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
 .form{
   display: flex;
   flex-direction: column;
@@ -7,21 +12,4 @@
   display: flex;
   flex-direction: column;
   margin-top: 2em;
-}
-
-.task{
-  background-color: #e0e0e0;
-  margin-top: .5em;
-  text-align: left;
-  padding: 1em;
-  border-radius: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  width: 300px;
-}
-
-.task label{
-  font-weight: bold;
 }
