--- a/src/index.css
+++ b/src/index.css
@@ -51,3 +51,20 @@ input[type='text']:focus, select:focus {
 .btn-primary:active {
   background-color: #6d9335;
 }
+
+.task{
+  background-color: #e0e0e0;
+  margin-top: .5em;
+  text-align: left;
+  padding: 1em;
+  border-radius: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+  width: 300px;
+}
+
+.task h3{
+  font-size: 20px;
+}
